--- a/Bloodmoney .html
+++ b/Bloodmoney .html
@@ -929,176 +929,176 @@ footer a:hover {
         <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
       </div>
       <div class="card-title">Bloodmoney 2</div>
-    </a><a href="Hungry Lamu.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
-        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
-      </div>
-      <div class="card-title">Hungry Lamu</div>
     </a><a href="CS Go Clicker.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/CS Go Clicker/thumbnail.png')">
         <img class="thumb" src="games/CS Go Clicker/thumbnail.png" alt="CS Go Clicker" loading="lazy">
       </div>
       <div class="card-title">CS Go Clicker</div>
-    </a><a href="FNAF 4.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
-        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+    </a><a href="Hungry Lamu.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
+        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
       </div>
-      <div class="card-title">FNAF 4</div>
-    </a><a href="Clear Vision 3.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 3/thumbnail.png')">
-        <img class="thumb" src="games/Clear Vision 3/thumbnail.png" alt="Clear Vision 3" loading="lazy">
-      </div>
-      <div class="card-title">Clear Vision 3</div>
-    </a><a href="Bouncemasters.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
-        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
-      </div>
-      <div class="card-title">Bouncemasters</div>
+      <div class="card-title">Hungry Lamu</div>
     </a><a href="1v1.lol.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
         <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
       </div>
       <div class="card-title">1v1.lol</div>
-    </a><a href="Block Blast.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
-        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
-      </div>
-      <div class="card-title">Block Blast</div>
-    </a><a href="Gun Spin.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
-        <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
-      </div>
-      <div class="card-title">Gun Spin</div>
-    </a><a href="Dunk Shot.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
-        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
-      </div>
-      <div class="card-title">Dunk Shot</div>
     </a><a href="Capybara Clicker.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
         <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
       </div>
       <div class="card-title">Capybara Clicker</div>
-    </a><a href="Bloxorz.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
-        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
+    </a><a href="FNAF 3.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 3/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 3/thumbnail.png" alt="FNAF 3" loading="lazy">
       </div>
-      <div class="card-title">Bloxorz</div>
-    </a><a href="Drive Mad.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
-        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
+      <div class="card-title">FNAF 3</div>
+    </a><a href="Slope.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Slope/thumbnail.jpg')">
+        <img class="thumb" src="games/Slope/thumbnail.jpg" alt="Slope" loading="lazy">
       </div>
-      <div class="card-title">Drive Mad</div>
-    </a><a href="Extreme Run 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
-        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
+      <div class="card-title">Slope</div>
+    </a><a href="Doki Doki Literature Club.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
+        <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club" loading="lazy">
       </div>
-      <div class="card-title">Extreme Run 3D</div>
+      <div class="card-title">Doki Doki Literature Club</div>
+    </a><a href="Bounty of One.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bounty of One/thumbnail.png')">
+        <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One" loading="lazy">
+      </div>
+      <div class="card-title">Bounty of One</div>
+    </a><a href="Happy Room.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
+        <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room" loading="lazy">
+      </div>
+      <div class="card-title">Happy Room</div>
+    </a><a href="FNAF 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 4</div>
     </a><a href="Idle Breakout.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Idle Breakout/thumbnail.png')">
         <img class="thumb" src="games/Idle Breakout/thumbnail.png" alt="Idle Breakout" loading="lazy">
       </div>
       <div class="card-title">Idle Breakout</div>
-    </a><a href="Bob The Robber 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 5/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 5/thumbnail.jpg" alt="Bob The Robber 5" loading="lazy">
+    </a><a href="Fireboy and Watergirl 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Fireboy and Watergirl 1/thumbnail.jpg')">
+        <img class="thumb" src="games/Fireboy and Watergirl 1/thumbnail.jpg" alt="Fireboy and Watergirl 1" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 5</div>
-    </a><a href="Henry Stickmin Fleeing The Complex.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
-        <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex" loading="lazy">
+      <div class="card-title">Fireboy and Watergirl 1</div>
+    </a><a href="Ages of Conflict.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
+        <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
       </div>
-      <div class="card-title">Henry Stickmin Fleeing The Complex</div>
-    </a><a href="Happy Wheels.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Happy Wheels/thumbnail.jpg')">
-        <img class="thumb" src="games/Happy Wheels/thumbnail.jpg" alt="Happy Wheels" loading="lazy">
-      </div>
-      <div class="card-title">Happy Wheels</div>
-    </a><a href="Clear Vision 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 5/thumbnail.png')">
-        <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5" loading="lazy">
-      </div>
-      <div class="card-title">Clear Vision 5</div>
-    </a><a href="10 Minutes Till Dawn.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/10 Minutes Till Dawn/thumbnail.png')">
-        <img class="thumb" src="games/10 Minutes Till Dawn/thumbnail.png" alt="10 Minutes Till Dawn" loading="lazy">
-      </div>
-      <div class="card-title">10 Minutes Till Dawn</div>
-    </a><a href="FNAF Sister Location.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/FNAF Sister Location/thumbnail.jpg')">
-        <img class="thumb" src="games/FNAF Sister Location/thumbnail.jpg" alt="FNAF Sister Location" loading="lazy">
-      </div>
-      <div class="card-title">FNAF Sister Location</div>
-    </a><a href="Escape Road .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Escape Road /thumbnail.png')">
-        <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
-      </div>
-      <div class="card-title">Escape Road </div>
+      <div class="card-title">Ages of Conflict</div>
     </a><a href="Blaze Drifter.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
         <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
       </div>
       <div class="card-title">Blaze Drifter</div>
-    </a><a href="Age Of War.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
-        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
-      </div>
-      <div class="card-title">Age Of War</div>
     </a><a href="Cluster Rush.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Cluster Rush/thumbnail.png')">
         <img class="thumb" src="games/Cluster Rush/thumbnail.png" alt="Cluster Rush" loading="lazy">
       </div>
       <div class="card-title">Cluster Rush</div>
-    </a><a href="Crazy Motorcycle.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Motorcycle/thumbnail.jpg')">
-        <img class="thumb" src="games/Crazy Motorcycle/thumbnail.jpg" alt="Crazy Motorcycle" loading="lazy">
+    </a><a href="Bit Planes.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bit Planes/thumbnail.jpg')">
+        <img class="thumb" src="games/Bit Planes/thumbnail.jpg" alt="Bit Planes" loading="lazy">
       </div>
-      <div class="card-title">Crazy Motorcycle</div>
-    </a><a href="Henry Stickmin Escaping The Prison.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
-        <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison" loading="lazy">
+      <div class="card-title">Bit Planes</div>
+    </a><a href="Earth Taken.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
+        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
       </div>
-      <div class="card-title">Henry Stickmin Escaping The Prison</div>
-    </a><a href="Granny.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
-        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
+      <div class="card-title">Earth Taken</div>
+    </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
+        <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
       </div>
-      <div class="card-title">Granny</div>
+      <div class="card-title">Burrito Bison Launcha Libre</div>
+    </a><a href="Henry Stickmin Fleeing The Complex.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Fleeing The Complex/thumbnail.png')">
+        <img class="thumb" src="games/Henry Stickmin Fleeing The Complex/thumbnail.png" alt="Henry Stickmin Fleeing The Complex" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Fleeing The Complex</div>
+    </a><a href="Dead Zed 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
+      </div>
+      <div class="card-title">Dead Zed 2</div>
+    </a><a href="Baldi’s Basics.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Baldi’s Basics/thumbnail.png')">
+        <img class="thumb" src="games/Baldi’s Basics/thumbnail.png" alt="Baldi’s Basics" loading="lazy">
+      </div>
+      <div class="card-title">Baldi’s Basics</div>
+    </a><a href="Bouncemasters.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bouncemasters/thumbnail.jpg')">
+        <img class="thumb" src="games/Bouncemasters/thumbnail.jpg" alt="Bouncemasters" loading="lazy">
+      </div>
+      <div class="card-title">Bouncemasters</div>
+    </a><a href="FNAF 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 2/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 2/thumbnail.png" alt="FNAF 2" loading="lazy">
+      </div>
+      <div class="card-title">FNAF 2</div>
     </a><a href="Clear Vision 1.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 1/thumbnail.jpg')">
         <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1" loading="lazy">
       </div>
       <div class="card-title">Clear Vision 1</div>
-    </a><a href="Bad Time Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
+    </a><a href="Helix Jump.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Helix Jump/thumbnail.jpg')">
+        <img class="thumb" src="games/Helix Jump/thumbnail.jpg" alt="Helix Jump" loading="lazy">
       </div>
-      <div class="card-title">Bad Time Simulator</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      <div class="card-title">Helix Jump</div>
+    </a><a href="Dunk Shot.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dunk Shot/thumbnail.png')">
+        <img class="thumb" src="games/Dunk Shot/thumbnail.png" alt="Dunk Shot" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 2</div>
-    </a><a href="Bitlife.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
-        <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
-      </div>
-      <div class="card-title">Bitlife</div>
-    </a><a href="Effing Worms.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Effing Worms/thumbnail.jpg')">
-        <img class="thumb" src="games/Effing Worms/thumbnail.jpg" alt="Effing Worms" loading="lazy">
-      </div>
-      <div class="card-title">Effing Worms</div>
-    </a><a href="Dreader.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
-        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
-      </div>
-      <div class="card-title">Dreader</div>
+      <div class="card-title">Dunk Shot</div>
     </a><a href="Deadly Descent.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Deadly Descent/thumbnail.png')">
         <img class="thumb" src="games/Deadly Descent/thumbnail.png" alt="Deadly Descent" loading="lazy">
       </div>
       <div class="card-title">Deadly Descent</div>
+    </a><a href="Bob The Robber 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+      </div>
+      <div class="card-title">Bob The Robber 2</div>
+    </a><a href="Extreme Run 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
+        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
+      </div>
+      <div class="card-title">Extreme Run 3D</div>
+    </a><a href="Bad Parenting.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
+        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
+      </div>
+      <div class="card-title">Bad Parenting</div>
+    </a><a href="Henry Stickmin Escaping The Prison.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Henry Stickmin Escaping The Prison/thumbnail.jpg')">
+        <img class="thumb" src="games/Henry Stickmin Escaping The Prison/thumbnail.jpg" alt="Henry Stickmin Escaping The Prison" loading="lazy">
+      </div>
+      <div class="card-title">Henry Stickmin Escaping The Prison</div>
+    </a><a href="Block Blast.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
+        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
+      </div>
+      <div class="card-title">Block Blast</div>
+    </a><a href="Dreader.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dreader/thumbnail.png')">
+        <img class="thumb" src="games/Dreader/thumbnail.png" alt="Dreader" loading="lazy">
+      </div>
+      <div class="card-title">Dreader</div>
+    </a><a href="Geometry Dash Lite.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
+        <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite" loading="lazy">
+      </div>
+      <div class="card-title">Geometry Dash Lite</div>
     </a>
     </div>
   </div>
