--- a/Crazy Motorcycle.html
+++ b/Crazy Motorcycle.html
@@ -924,31 +924,21 @@ footer a:hover {
   <div class="recommendations">
     <h2>You Might Also Like</h2>
     <div class="grid">
-      <a href="Crazy Cattle 3D.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
-        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
+      <a href="Blaze Drifter.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
+        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
       </div>
-      <div class="card-title">Crazy Cattle 3D</div>
+      <div class="card-title">Blaze Drifter</div>
     </a><a href="Bouncy Motors.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bouncy Motors/thumbnail.jpg')">
         <img class="thumb" src="games/Bouncy Motors/thumbnail.jpg" alt="Bouncy Motors" loading="lazy">
       </div>
       <div class="card-title">Bouncy Motors</div>
-    </a><a href="Blaze Drifter.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blaze Drifter/thumbnail.jpg')">
-        <img class="thumb" src="games/Blaze Drifter/thumbnail.jpg" alt="Blaze Drifter" loading="lazy">
-      </div>
-      <div class="card-title">Blaze Drifter</div>
     </a><a href="Drift Hunters.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Drift Hunters/thumbnail.jpg')">
         <img class="thumb" src="games/Drift Hunters/thumbnail.jpg" alt="Drift Hunters" loading="lazy">
       </div>
       <div class="card-title">Drift Hunters</div>
-    </a><a href="Drift Boss.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
-        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
-      </div>
-      <div class="card-title">Drift Boss</div>
     </a><a href="Crazy Cars.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Crazy Cars/thumbnail.jpg')">
         <img class="thumb" src="games/Crazy Cars/thumbnail.jpg" alt="Crazy Cars" loading="lazy">
@@ -964,141 +954,151 @@ footer a:hover {
         <img class="thumb" src="games/Escape Road /thumbnail.png" alt="Escape Road " loading="lazy">
       </div>
       <div class="card-title">Escape Road </div>
-    </a><a href="Bad Parenting.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
+    </a><a href="Drift Boss.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drift Boss/thumbnail.png')">
+        <img class="thumb" src="games/Drift Boss/thumbnail.png" alt="Drift Boss" loading="lazy">
       </div>
-      <div class="card-title">Bad Parenting</div>
-    </a><a href="Bloodmoney .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
-        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+      <div class="card-title">Drift Boss</div>
+    </a><a href="Crazy Cattle 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Crazy Cattle 3D/thumbnail.png')">
+        <img class="thumb" src="games/Crazy Cattle 3D/thumbnail.png" alt="Crazy Cattle 3D" loading="lazy">
       </div>
-      <div class="card-title">Bloodmoney </div>
-    </a><a href="Burrito Bison Launcha Libre.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Burrito Bison Launcha Libre/thumbnail.jpg')">
-        <img class="thumb" src="games/Burrito Bison Launcha Libre/thumbnail.jpg" alt="Burrito Bison Launcha Libre" loading="lazy">
+      <div class="card-title">Crazy Cattle 3D</div>
+    </a><a href="Cookie Clicker.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Cookie Clicker/thumbnail.png')">
+        <img class="thumb" src="games/Cookie Clicker/thumbnail.png" alt="Cookie Clicker" loading="lazy">
       </div>
-      <div class="card-title">Burrito Bison Launcha Libre</div>
-    </a><a href="Crank It!.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Crank It!/thumbnail.jpg')">
-        <img class="thumb" src="games/Crank It!/thumbnail.jpg" alt="Crank It!" loading="lazy">
+      <div class="card-title">Cookie Clicker</div>
+    </a><a href="FNAF 4.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 4/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 4/thumbnail.png" alt="FNAF 4" loading="lazy">
       </div>
-      <div class="card-title">Crank It!</div>
-    </a><a href="Clear Vision 5.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 5/thumbnail.png')">
-        <img class="thumb" src="games/Clear Vision 5/thumbnail.png" alt="Clear Vision 5" loading="lazy">
+      <div class="card-title">FNAF 4</div>
+    </a><a href="Extreme Run 3D.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Extreme Run 3D/thumbnail.jpg')">
+        <img class="thumb" src="games/Extreme Run 3D/thumbnail.jpg" alt="Extreme Run 3D" loading="lazy">
       </div>
-      <div class="card-title">Clear Vision 5</div>
-    </a><a href="Bob The Robber .html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber /thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber /thumbnail.jpg" alt="Bob The Robber " loading="lazy">
+      <div class="card-title">Extreme Run 3D</div>
+    </a><a href="Geometry Dash Lite.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Geometry Dash Lite/thumbnail.png')">
+        <img class="thumb" src="games/Geometry Dash Lite/thumbnail.png" alt="Geometry Dash Lite" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber </div>
-    </a><a href="Doki Doki Literature Club.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Doki Doki Literature Club/thumbnail.jpg')">
-        <img class="thumb" src="games/Doki Doki Literature Club/thumbnail.jpg" alt="Doki Doki Literature Club" loading="lazy">
-      </div>
-      <div class="card-title">Doki Doki Literature Club</div>
+      <div class="card-title">Geometry Dash Lite</div>
     </a><a href="Clear Vision 4.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 4/thumbnail.jpg')">
         <img class="thumb" src="games/Clear Vision 4/thumbnail.jpg" alt="Clear Vision 4" loading="lazy">
       </div>
       <div class="card-title">Clear Vision 4</div>
-    </a><a href="Dead Zed 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
-      </div>
-      <div class="card-title">Dead Zed 2</div>
-    </a><a href="Blackjack.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
-        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
-      </div>
-      <div class="card-title">Blackjack</div>
-    </a><a href="Bloxorz.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bloxorz/thumbnail.png')">
-        <img class="thumb" src="games/Bloxorz/thumbnail.png" alt="Bloxorz" loading="lazy">
-      </div>
-      <div class="card-title">Bloxorz</div>
-    </a><a href="Deadly Descent.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Deadly Descent/thumbnail.png')">
-        <img class="thumb" src="games/Deadly Descent/thumbnail.png" alt="Deadly Descent" loading="lazy">
-      </div>
-      <div class="card-title">Deadly Descent</div>
-    </a><a href="Bounty of One.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bounty of One/thumbnail.png')">
-        <img class="thumb" src="games/Bounty of One/thumbnail.png" alt="Bounty of One" loading="lazy">
-      </div>
-      <div class="card-title">Bounty of One</div>
-    </a><a href="Capybara Clicker.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Capybara Clicker/thumbnail.png')">
-        <img class="thumb" src="games/Capybara Clicker/thumbnail.png" alt="Capybara Clicker" loading="lazy">
-      </div>
-      <div class="card-title">Capybara Clicker</div>
-    </a><a href="Block Blast.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
-        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
-      </div>
-      <div class="card-title">Block Blast</div>
-    </a><a href="Basketball FRVR.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Basketball FRVR/thumbnail.jpg')">
-        <img class="thumb" src="games/Basketball FRVR/thumbnail.jpg" alt="Basketball FRVR" loading="lazy">
-      </div>
-      <div class="card-title">Basketball FRVR</div>
     </a><a href="BTD5.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/BTD5/thumbnail.jpg')">
         <img class="thumb" src="games/BTD5/thumbnail.jpg" alt="BTD5" loading="lazy">
       </div>
       <div class="card-title">BTD5</div>
-    </a><a href="Bob The Robber 2.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bob The Robber 2/thumbnail.jpg')">
-        <img class="thumb" src="games/Bob The Robber 2/thumbnail.jpg" alt="Bob The Robber 2" loading="lazy">
+    </a><a href="Dead Zed 2.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Dead Zed 2/thumbnail.jpg')">
+        <img class="thumb" src="games/Dead Zed 2/thumbnail.jpg" alt="Dead Zed 2" loading="lazy">
       </div>
-      <div class="card-title">Bob The Robber 2</div>
+      <div class="card-title">Dead Zed 2</div>
+    </a><a href="Hungry Lamu.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Hungry Lamu/thumbnail.jpg')">
+        <img class="thumb" src="games/Hungry Lamu/thumbnail.jpg" alt="Hungry Lamu" loading="lazy">
+      </div>
+      <div class="card-title">Hungry Lamu</div>
     </a><a href="Ages of Conflict.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Ages of Conflict/thumbnail.png')">
         <img class="thumb" src="games/Ages of Conflict/thumbnail.png" alt="Ages of Conflict" loading="lazy">
       </div>
       <div class="card-title">Ages of Conflict</div>
-    </a><a href="Age Of War.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
-        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
+    </a><a href="FNAF 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF 1/thumbnail.png')">
+        <img class="thumb" src="games/FNAF 1/thumbnail.png" alt="FNAF 1" loading="lazy">
       </div>
-      <div class="card-title">Age Of War</div>
+      <div class="card-title">FNAF 1</div>
+    </a><a href="Gun Spin.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Gun Spin/thumbnail.png')">
+        <img class="thumb" src="games/Gun Spin/thumbnail.png" alt="Gun Spin" loading="lazy">
+      </div>
+      <div class="card-title">Gun Spin</div>
+    </a><a href="Block Blast.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Block Blast/thumbnail.jpg')">
+        <img class="thumb" src="games/Block Blast/thumbnail.jpg" alt="Block Blast" loading="lazy">
+      </div>
+      <div class="card-title">Block Blast</div>
     </a><a href="Bloodmoney 2.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney 2/thumbnail.jpg')">
         <img class="thumb" src="games/Bloodmoney 2/thumbnail.jpg" alt="Bloodmoney 2" loading="lazy">
       </div>
       <div class="card-title">Bloodmoney 2</div>
-    </a><a href="Bad Time Simulator.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Time Simulator/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Time Simulator/thumbnail.jpg" alt="Bad Time Simulator" loading="lazy">
+    </a><a href="Drive Mad.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Drive Mad/thumbnail.png')">
+        <img class="thumb" src="games/Drive Mad/thumbnail.png" alt="Drive Mad" loading="lazy">
       </div>
-      <div class="card-title">Bad Time Simulator</div>
-    </a><a href="1v1.lol.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/1v1.lol/thumbnail.png')">
-        <img class="thumb" src="games/1v1.lol/thumbnail.png" alt="1v1.lol" loading="lazy">
+      <div class="card-title">Drive Mad</div>
+    </a><a href="Granny.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Granny/thumbnail.png')">
+        <img class="thumb" src="games/Granny/thumbnail.png" alt="Granny" loading="lazy">
       </div>
-      <div class="card-title">1v1.lol</div>
+      <div class="card-title">Granny</div>
     </a><a href="Crossy Road.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Crossy Road/thumbnail.jpg')">
         <img class="thumb" src="games/Crossy Road/thumbnail.jpg" alt="Crossy Road" loading="lazy">
       </div>
       <div class="card-title">Crossy Road</div>
-    </a><a href="Bad Piggies.html" class="game-card">
-      <div class="thumb-container" style="--thumb-url: url('games/Bad Piggies/thumbnail.jpg')">
-        <img class="thumb" src="games/Bad Piggies/thumbnail.jpg" alt="Bad Piggies" loading="lazy">
+    </a><a href="Happy Room.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Happy Room/thumbnail.png')">
+        <img class="thumb" src="games/Happy Room/thumbnail.png" alt="Happy Room" loading="lazy">
       </div>
-      <div class="card-title">Bad Piggies</div>
+      <div class="card-title">Happy Room</div>
+    </a><a href="Earth Taken.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Earth Taken/thumbnail.jpg')">
+        <img class="thumb" src="games/Earth Taken/thumbnail.jpg" alt="Earth Taken" loading="lazy">
+      </div>
+      <div class="card-title">Earth Taken</div>
+    </a><a href="FNAF Pizzeria Simulator.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/FNAF Pizzeria Simulator/thumbnail.jpg')">
+        <img class="thumb" src="games/FNAF Pizzeria Simulator/thumbnail.jpg" alt="FNAF Pizzeria Simulator" loading="lazy">
+      </div>
+      <div class="card-title">FNAF Pizzeria Simulator</div>
+    </a><a href="Blackjack.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Blackjack/thumbnail.png')">
+        <img class="thumb" src="games/Blackjack/thumbnail.png" alt="Blackjack" loading="lazy">
+      </div>
+      <div class="card-title">Blackjack</div>
     </a><a href="Deltarune.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Deltarune/thumbnail.jpg')">
         <img class="thumb" src="games/Deltarune/thumbnail.jpg" alt="Deltarune" loading="lazy">
       </div>
       <div class="card-title">Deltarune</div>
+    </a><a href="Age Of War.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Age Of War/thumbnail.png')">
+        <img class="thumb" src="games/Age Of War/thumbnail.png" alt="Age Of War" loading="lazy">
+      </div>
+      <div class="card-title">Age Of War</div>
+    </a><a href="Deepest Sword.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Deepest Sword/thumbnail.jpg')">
+        <img class="thumb" src="games/Deepest Sword/thumbnail.jpg" alt="Deepest Sword" loading="lazy">
+      </div>
+      <div class="card-title">Deepest Sword</div>
+    </a><a href="Bad Parenting.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bad Parenting/thumbnail.jpg')">
+        <img class="thumb" src="games/Bad Parenting/thumbnail.jpg" alt="Bad Parenting" loading="lazy">
+      </div>
+      <div class="card-title">Bad Parenting</div>
     </a><a href="Bitlife.html" class="game-card">
       <div class="thumb-container" style="--thumb-url: url('games/Bitlife/thumbnail.jpg')">
         <img class="thumb" src="games/Bitlife/thumbnail.jpg" alt="Bitlife" loading="lazy">
       </div>
       <div class="card-title">Bitlife</div>
+    </a><a href="Clear Vision 1.html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Clear Vision 1/thumbnail.jpg')">
+        <img class="thumb" src="games/Clear Vision 1/thumbnail.jpg" alt="Clear Vision 1" loading="lazy">
+      </div>
+      <div class="card-title">Clear Vision 1</div>
+    </a><a href="Bloodmoney .html" class="game-card">
+      <div class="thumb-container" style="--thumb-url: url('games/Bloodmoney /thumbnail.jpg')">
+        <img class="thumb" src="games/Bloodmoney /thumbnail.jpg" alt="Bloodmoney " loading="lazy">
+      </div>
+      <div class="card-title">Bloodmoney </div>
     </a>
     </div>
   </div>
